<resources>

    <string name="app_name">Tally_Meals</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Tally Meals</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="enter_code">Please enter the Sorority Code below</string>
    <string name="enter_codepass">Please enter the Sorority password below</string>
    <string name="lunch0">Onion Rings and Crispy Potato Coins</string>
    <string name="lunch1">Homemade bread baked with berries and topped with our home-made carmel sauce</string>
    <string name="dinner1">Shrimp Brochette Dinner</string>
    <string name="dinner2">Butterflied shrimp are stuffed with jalapeno and wrapped in bacon, and it just gets better from there. This goes great with dirty rice a nice green salad and crusty French bread</string>
    <string name="dinner3">Butterflied and stuffed with cream cheese</string>
</resources>
