<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/backgroud_purple"
    android:id="@+id/root_dailyview"
    >

    <RelativeLayout
        android:id="@+id/ttbr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_Purple"
        >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways"
            app:layout_collapseMode="pin"
            android:background="@color/app_theme"/>

        <TextView
            android:id="@+id/txToolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="Daily View"
            android:textSize="17dp"
            android:singleLine="true"
            android:paddingRight="10dp"/>

        <ImageView
            android:id="@+id/imgToolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_menu_black_24dp"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="15dp"
            />

    </RelativeLayout>

    <View
        android:id="@+id/linne"
        android:layout_width="match_parent"
        android:layout_height="0.66dp"
        android:background="@color/white"
        android:layout_below="@id/ttbr"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/linne"
        android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="2dp"
        android:paddingBottom="15pt"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:background="@drawable/blue_ed"
            android:layout_margin="30dp"
            >
            <ImageView
                android:id="@+id/ic_previous"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:src="@drawable/ic_left"/>

        <TextView
            android:id="@+id/txdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textAlignment="center"
            android:text="24 Oct , 2019"
            android:textColor="@color/white"
            android:textSize="9pt"/>

            <ImageView
                android:id="@+id/ic_next"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:src="@drawable/ic_right"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6pt"
            >

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:alpha="0.5"
            >

        </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Lunch 11:08 AM"
                android:textSize="9pt"
                style="@style/bold_tx"
                android:padding="6dp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:layout_centerHorizontal="true"
                android:layout_centerInParent="true"
                />

        </RelativeLayout>

        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="Burgers and Sandwhiches"
        style="@style/bold_tx"
        android:textColor="@color/white"
        android:layout_marginTop="11pt"
        android:textSize="9pt"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="Salad Bar"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:textSize="8pt"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="Burgers and Sandwhiches"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:textSize="8pt"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/lunch1"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:lineSpacingExtra="4dp"
            android:padding="3dp"
            android:layout_marginLeft="30dp"
            android:singleLine="false"
            android:textSize="8pt"/>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            android:alpha="0.5"
            android:layout_marginTop="10pt"
            android:layout_margin="30dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50pt"
                android:orientation="vertical"
                android:padding="10dp"
                >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Notes"
                android:textColor="@color/black"
                android:textSize="10pt"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="9pt"
                android:inputType="textMultiLine"
                android:singleLine="false"
                android:textAlignment="textStart"
                android:background="@android:color/transparent"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="Submit"
                android:textAllCaps="false"
                android:background="@drawable/button"/>


            <Button
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="Cancel"
                android:layout_marginLeft="5dp"
                android:textAllCaps="false"
                android:background="@drawable/button"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8pt"
            >

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="37dp"
                android:alpha="0.5"
                >

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Dinner 07:00 PM"
                android:textSize="9pt"
                style="@style/bold_tx"
                android:padding="6dp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:layout_centerHorizontal="true"
                android:layout_centerInParent="true"
                />

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/dinner1"
            style="@style/bold_tx"
            android:textColor="@color/white"
            android:layout_marginTop="11pt"
            android:textSize="9pt"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="Salad Bar"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:textSize="8pt"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/dinner3"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:lineSpacingExtra="4dp"
            android:padding="3dp"
            android:layout_marginLeft="30dp"
            android:singleLine="false"
            android:textSize="8pt"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/dinner2"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:textSize="8pt"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            android:alpha="0.5"
            android:layout_marginTop="10pt"
            android:layout_margin="30dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50pt"
                android:orientation="vertical"
                android:padding="10dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Notes"
                    android:textColor="@color/black"
                    android:textSize="10pt"
                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="9pt"
                    android:inputType="textMultiLine"
                    android:singleLine="false"
                    android:textAlignment="textStart"
                    android:background="@android:color/transparent"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="Submit"
                android:textAllCaps="false"
                android:background="@drawable/button"/>


            <Button
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="Cancel"
                android:layout_marginLeft="5dp"
                android:textAllCaps="false"
                android:background="@drawable/button"/>

        </LinearLayout>


</LinearLayout>
    </ScrollView>

</RelativeLayout>