<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/backgroud_purple"
    >


    <RelativeLayout
        android:id="@+id/ttbr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_Purple"
        >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways"
            app:layout_collapseMode="pin"
            android:background="@color/app_theme"/>

        <TextView
            android:id="@+id/txToolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="Weekly View"
            android:textSize="17dp"
            android:singleLine="true"
            android:paddingRight="10dp"/>

        <ImageView
            android:id="@+id/imgToolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_menu_black_24dp"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="15dp"
            />

    </RelativeLayout>

    <View
        android:id="@+id/linne"
        android:layout_width="match_parent"
        android:layout_height="0.66dp"
        android:background="@color/white"
        android:layout_below="@id/ttbr"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/linne"
        android:layout_margin="10dp"
        android:layout_marginTop="2dp"
        >


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            >
            <RelativeLayout
                android:id="@+id/llyt5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="2dp"
                android:padding="15dp"
                >

                <TextView
                    android:id="@+id/ddate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="29"
                    android:textSize="12pt"
                    android:layout_alignParentStart="true"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Mon"
                    android:textSize="8pt"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/ddate"
                    android:textColor="@color/black"
                    />


                <TextView
                    android:id="@+id/ttime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/ddate"
                    android:text="LUNCH  |  12 : 00 PM"
                    android:layout_centerHorizontal="true"
                    android:textAlignment="center"
                    android:textSize="10pt"
                    android:textColor="@color/light_Purple"/>


                <TextView
                    android:id="@+id/txx"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Burgers and Sandwhiches"
                    android:layout_centerHorizontal="true"
                    android:textSize="8pt"
                    android:textAlignment="center"
                    android:singleLine="false"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@+id/ttime"
                    android:textColor="@color/blue"/>
                <ImageView
                android:id="@+id/ic_down"
                android:layout_width="wrap_content"
                android:layout_height="44dp"
                android:src="@drawable/ic_arrow_down"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10pt"/>

                <LinearLayout
                    android:id="@+id/lyt1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/txx"
                    android:layout_marginTop="20dp"
                    android:visibility="gone"
                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lunch0"
                        android:textSize="8pt"
                        style="@style/bold_tx"
                        android:textColor="@color/black"
                        android:textAlignment="center"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Black Bean Burhers"
                        android:textSize="8pt"
                        style="@style/tx_vu"
                        android:layout_marginTop="3pt"
                        android:textColor="@color/black"
                        android:textAlignment="center"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dinner1"
                        android:textSize="8pt"
                        android:layout_marginTop="3pt"
                        style="@style/bold_tx"
                        android:textColor="@color/black"
                        android:textAlignment="center"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lunch1"
                        android:textSize="8pt"
                        android:layout_marginTop="3pt"
                        style="@style/tx_vu"
                        android:textColor="@color/black"
                        android:textAlignment="center"
                        />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Swiss Cheese, shaved lettuce
                             English Muffin"
                        android:textSize="8pt"
                        android:textColor="@color/black"
                        android:textAlignment="center"
                        />

                </LinearLayout>

            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            android:layout_marginTop="6dp"
            >
        <RelativeLayout
            android:id="@+id/llyt6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="2dp"
            android:padding="15dp"
            >

            <TextView
                android:id="@+id/ddate1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="29"
                android:textSize="12pt"
                android:layout_alignParentStart="true"
                android:layout_gravity="center"
                android:textColor="@color/black"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Mon"
                android:textSize="8pt"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/ddate1"
                android:textColor="@color/black"
                />


            <TextView
                android:id="@+id/ttime1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/ddate1"
                android:text="DINNER  |  7 : 00 PM"
                android:layout_centerHorizontal="true"
                android:textAlignment="center"
                android:textSize="10pt"
                android:textColor="@color/light_Purple"/>


            <TextView
                android:id="@+id/txx1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Dal and Rice"
                android:layout_centerHorizontal="true"
                android:textSize="8pt"
                android:textAlignment="center"
                android:singleLine="false"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/ttime1"
                android:textColor="@color/blue"/>

            <ImageView
                android:id="@+id/ic_down1"
                android:layout_width="wrap_content"
                android:layout_height="44dp"
                android:src="@drawable/ic_arrow_down"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10pt"/>
            <LinearLayout
                android:id="@+id/lyt2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/txx1"
                android:layout_marginTop="20dp"
                android:visibility="gone"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dinner1"
                    android:textSize="8pt"
                    style="@style/bold_tx"
                    android:layout_marginTop="3pt"
                    android:textColor="@color/black"
                    android:textAlignment="center"
                    />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Salad Bar"
                    android:textSize="8pt"
                    style="@style/tx_vu"
                    android:layout_marginTop="3pt"
                    android:textColor="@color/black"
                    android:textAlignment="center"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Black Bean Burhers"
                    android:textSize="8pt"
                    style="@style/bold_tx"
                    android:layout_marginTop="3pt"
                    android:textColor="@color/black"
                    android:textAlignment="center"
                    />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Swiss Cheese, shaved lettuce
                             English Muffin"
                    android:textSize="8pt"
                    style="@style/bold_tx"
                    android:layout_marginTop="3pt"
                    android:textColor="@color/black"
                    android:textAlignment="center"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dinner3"
                    android:textSize="8pt"
                    style="@style/tx_vu"
                    android:layout_marginTop="3pt"
                    android:textColor="@color/black"
                    android:textAlignment="center"
                    />

            </LinearLayout>
        </RelativeLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</RelativeLayout>